Add SHEQ Audit Form and related views, models, and access rights

--- a/READMe
+++ b/READMe
@@ -1,2 +1,7 @@
 #Process evaluation
 The process name field type needs to be looked at
+
+
+## SHEQ AUDIT FORM
+Lead Auditor field is unknown(currently hr.employee)
+
