minor edits to audit form

--- a/READMe
+++ b/READMe
@@ -4,4 +4,7 @@ The process name field type needs to be looked at
 
 ## SHEQ AUDIT FORM
 Lead Auditor field is unknown(currently hr.employee)
+Audit area to be looked at.
+Audit type to be changed to a dropdown with options to be given.
+
 
